updates layout, adds chat list, updates event handling and UX

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
-.App-header {
+.header {
   background-color: #282c34;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
