--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,23 @@
     transform: rotate(360deg);
   }
 }
+
+.inputfile {
+  width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+  z-index: -1;
+  cursor: pointer;
+}
+
+.inputfile + label {
+  font-size: 1.33em;
+  font-weight: 700;
+  display: inline-block;
+  width: 30px;
+  height: auto;
+  position: absolute;
+  right: 66px;
+}
