updates responsive markup and scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,31 @@
   color: white;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #fff; 
+}
+
+::-webkit-scrollbar-track:hover {
+  background: #efefef; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #aaa; 
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
